--- a/docs/文章/实验记录系列/实验记录索引.md
+++ b/docs/文章/实验记录系列/实验记录索引.md
@@ -9,8 +9,6 @@
 
 * [qb匿名模式名称显示研究](./qb匿名模式名称显示研究.md)
 * [已知bittorrent客户端生存调查](./已知bittorrent客户端生存调查/已知客户端调查-说明.md)
-* [有关比特彗星若干历史遗留问题的整理](./BC历史遗留问题.md)
-* [有关比特彗星的奇谈怪论](./有关BC的奇谈怪论.md)
 * [比特彗星改进建议](./BC改进建议.md)
 * [eMule设置IP绑定](./emule的ip绑定.md)
 
@@ -25,8 +23,13 @@
 * [小米路由支持更多IPv6获取方式](./小米路由更多IPv6获取方式.md)
 * [L2TP特性研究](./L2TP特性研究.md)
 
+### Docusaurus
+
+* [解决showLastUpdateTime总是显示相同日期问题](./Docusaurus-最后修改时间.md)
+
 ### 杂项
 
 * [B站专栏文本复制问题](./B站专栏文本复制问题.md)
+* [「转」基于爱奇艺HCDN视频分发网络的开放缓存](./爱奇艺HCDN.md)
 
 
